# AttestVerify

./: README.md
host/: Cargo.toml
host/src/: helper.rs  input.json  main.rs  structs.rs  zk_proof.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
zkverifyJs/: index.js  index.ts  package-lock.json  package.json  tsconfig.json
