[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag = "v1.0.1", features = [
    "prove",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
sha2 = "0.10.8"
chrono = "=0.4.38"
ethers-core = { version = "2.0.14"}
anyhow = "1.0.89"