[package]
name = "hasher_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0", tag = "v1.0.1", default-features = false, features = [
    'std',
] }
sha2 = "0.9"
ethers-core = { version = "2.0.14" }
chrono = "=0.4.38"
hex-literal = "0.4"
serde = "1.0"
